Init and package infor.. HAVE_CONFIG_H still not working

--- a/jupiter/autom4te.cache/output.1
+++ b/jupiter/autom4te.cache/output.1
@@ -3316,6 +3316,18 @@ fi
 done
 
 
+for ac_header in dlfcn.h
+do :
+  ac_fn_c_check_header_mongrel "$LINENO" "dlfcn.h" "ac_cv_header_dlfcn_h" "$ac_includes_default"
+if test "x$ac_cv_header_dlfcn_h" = xyes; then :
+  cat >>confdefs.h <<_ACEOF
+@%:@define HAVE_DLFCN_H 1
+_ACEOF
+ 
+fi
+
+done
+
 # Checks for typedefs, structures, and compiler characteristics.
 
 # Checks for library functions.
