--- a/jupiter/autom4te.cache/traces.1
+++ b/jupiter/autom4te.cache/traces.1
@@ -72,5 +72,6 @@ m4trace:configure.ac:16: -1- m4_pattern_allow([^GREP$])
 m4trace:configure.ac:16: -1- m4_pattern_allow([^EGREP$])
 m4trace:configure.ac:16: -1- m4_pattern_allow([^STDC_HEADERS$])
 m4trace:configure.ac:16: -1- m4_pattern_allow([^HAVE_STDLIB_H$])
-m4trace:configure.ac:24: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:24: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:18: -1- m4_pattern_allow([^HAVE_DLFCN_H$])
+m4trace:configure.ac:25: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:25: -1- m4_pattern_allow([^LTLIBOBJS$])
