--- a/jupiter/autom4te.cache/traces.1
+++ b/jupiter/autom4te.cache/traces.1
@@ -62,16 +62,17 @@ m4trace:configure.ac:10: -1- m4_pattern_allow([^CC$])
 m4trace:configure.ac:10: -1- m4_pattern_allow([^ac_ct_CC$])
 m4trace:configure.ac:10: -1- m4_pattern_allow([^EXEEXT$])
 m4trace:configure.ac:10: -1- m4_pattern_allow([^OBJEXT$])
-m4trace:configure.ac:11: -1- m4_pattern_allow([^INSTALL_PROGRAM$])
-m4trace:configure.ac:11: -1- m4_pattern_allow([^INSTALL_SCRIPT$])
-m4trace:configure.ac:11: -1- m4_pattern_allow([^INSTALL_DATA$])
-m4trace:configure.ac:16: -1- m4_pattern_allow([^CPP$])
-m4trace:configure.ac:16: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.ac:16: -1- m4_pattern_allow([^CPP$])
-m4trace:configure.ac:16: -1- m4_pattern_allow([^GREP$])
-m4trace:configure.ac:16: -1- m4_pattern_allow([^EGREP$])
-m4trace:configure.ac:16: -1- m4_pattern_allow([^STDC_HEADERS$])
-m4trace:configure.ac:16: -1- m4_pattern_allow([^HAVE_STDLIB_H$])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^HAVE_DLFCN_H$])
-m4trace:configure.ac:25: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:25: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:12: -1- m4_pattern_allow([^bash_var$])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^INSTALL_PROGRAM$])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^INSTALL_SCRIPT$])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^INSTALL_DATA$])
+m4trace:configure.ac:22: -1- m4_pattern_allow([^CPP$])
+m4trace:configure.ac:22: -1- m4_pattern_allow([^CPPFLAGS$])
+m4trace:configure.ac:22: -1- m4_pattern_allow([^CPP$])
+m4trace:configure.ac:22: -1- m4_pattern_allow([^GREP$])
+m4trace:configure.ac:22: -1- m4_pattern_allow([^EGREP$])
+m4trace:configure.ac:22: -1- m4_pattern_allow([^STDC_HEADERS$])
+m4trace:configure.ac:22: -1- m4_pattern_allow([^HAVE_STDLIB_H$])
+m4trace:configure.ac:24: -1- m4_pattern_allow([^HAVE_DLFCN_H$])
+m4trace:configure.ac:31: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:31: -1- m4_pattern_allow([^LTLIBOBJS$])
