--- a/jupiter/autom4te.cache/traces.1
+++ b/jupiter/autom4te.cache/traces.1
@@ -50,28 +50,29 @@ m4trace:configure.ac:5: -1- m4_pattern_allow([^LIBS$])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^build_alias$])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^host_alias$])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^target_alias$])
-m4trace:configure.ac:11: -1- m4_pattern_allow([^CC$])
-m4trace:configure.ac:11: -1- m4_pattern_allow([^CFLAGS$])
-m4trace:configure.ac:11: -1- m4_pattern_allow([^LDFLAGS$])
-m4trace:configure.ac:11: -1- m4_pattern_allow([^LIBS$])
-m4trace:configure.ac:11: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.ac:11: -1- m4_pattern_allow([^CC$])
-m4trace:configure.ac:11: -1- m4_pattern_allow([^CC$])
-m4trace:configure.ac:11: -1- m4_pattern_allow([^CC$])
-m4trace:configure.ac:11: -1- m4_pattern_allow([^CC$])
-m4trace:configure.ac:11: -1- m4_pattern_allow([^ac_ct_CC$])
-m4trace:configure.ac:11: -1- m4_pattern_allow([^EXEEXT$])
-m4trace:configure.ac:11: -1- m4_pattern_allow([^OBJEXT$])
-m4trace:configure.ac:13: -1- m4_pattern_allow([^bash_var$])
-m4trace:configure.ac:16: -1- m4_pattern_allow([^INSTALL_PROGRAM$])
-m4trace:configure.ac:16: -1- m4_pattern_allow([^INSTALL_SCRIPT$])
-m4trace:configure.ac:16: -1- m4_pattern_allow([^INSTALL_DATA$])
-m4trace:configure.ac:24: -1- m4_pattern_allow([^CPP$])
-m4trace:configure.ac:24: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.ac:24: -1- m4_pattern_allow([^CPP$])
-m4trace:configure.ac:24: -1- m4_pattern_allow([^GREP$])
-m4trace:configure.ac:24: -1- m4_pattern_allow([^EGREP$])
-m4trace:configure.ac:24: -1- m4_pattern_allow([^STDC_HEADERS$])
-m4trace:configure.ac:26: -1- m4_pattern_allow([^HAVE_DLFCN_H$])
-m4trace:configure.ac:33: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:33: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^CC$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^CFLAGS$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^LDFLAGS$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^LIBS$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^CPPFLAGS$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^CC$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^CC$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^CC$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^CC$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^ac_ct_CC$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^EXEEXT$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^OBJEXT$])
+m4trace:configure.ac:18: -1- m4_pattern_allow([^bash_var$])
+m4trace:configure.ac:21: -1- m4_pattern_allow([^INSTALL_PROGRAM$])
+m4trace:configure.ac:21: -1- m4_pattern_allow([^INSTALL_SCRIPT$])
+m4trace:configure.ac:21: -1- m4_pattern_allow([^INSTALL_DATA$])
+m4trace:configure.ac:28: -1- m4_pattern_allow([^CPP$])
+m4trace:configure.ac:28: -1- m4_pattern_allow([^CPPFLAGS$])
+m4trace:configure.ac:28: -1- m4_pattern_allow([^CPP$])
+m4trace:configure.ac:28: -1- m4_pattern_allow([^GREP$])
+m4trace:configure.ac:28: -1- m4_pattern_allow([^EGREP$])
+m4trace:configure.ac:28: -1- m4_pattern_allow([^STDC_HEADERS$])
+m4trace:configure.ac:34: -1- m4_pattern_allow([^HAVE_PTHREAD_H$])
+m4trace:configure.ac:45: -1- m4_pattern_allow([^HAVE_DLFCN_H$])
+m4trace:configure.ac:52: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:52: -1- m4_pattern_allow([^LTLIBOBJS$])
