--- a/jupiter/autom4te.cache/traces.1
+++ b/jupiter/autom4te.cache/traces.1
@@ -66,13 +66,14 @@ m4trace:configure.ac:13: -1- m4_pattern_allow([^bash_var$])
 m4trace:configure.ac:16: -1- m4_pattern_allow([^INSTALL_PROGRAM$])
 m4trace:configure.ac:16: -1- m4_pattern_allow([^INSTALL_SCRIPT$])
 m4trace:configure.ac:16: -1- m4_pattern_allow([^INSTALL_DATA$])
-m4trace:configure.ac:26: -1- m4_pattern_allow([^CPP$])
-m4trace:configure.ac:26: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.ac:26: -1- m4_pattern_allow([^CPP$])
-m4trace:configure.ac:26: -1- m4_pattern_allow([^GREP$])
-m4trace:configure.ac:26: -1- m4_pattern_allow([^EGREP$])
-m4trace:configure.ac:26: -1- m4_pattern_allow([^STDC_HEADERS$])
-m4trace:configure.ac:30: -1- m4_pattern_allow([^HAVE_PTHREAD_H$])
-m4trace:configure.ac:47: -1- m4_pattern_allow([^HAVE_DLFCN_H$])
-m4trace:configure.ac:54: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:54: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:31: -1- m4_pattern_allow([^CPP$])
+m4trace:configure.ac:31: -1- m4_pattern_allow([^CPPFLAGS$])
+m4trace:configure.ac:31: -1- m4_pattern_allow([^CPP$])
+m4trace:configure.ac:31: -1- m4_pattern_allow([^GREP$])
+m4trace:configure.ac:31: -1- m4_pattern_allow([^EGREP$])
+m4trace:configure.ac:31: -1- m4_pattern_allow([^STDC_HEADERS$])
+m4trace:configure.ac:34: -1- m4_pattern_allow([^HAVE_PTHREAD_H$])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^ASYNC_EXEC$])
+m4trace:configure.ac:62: -1- m4_pattern_allow([^HAVE_DLFCN_H$])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^LTLIBOBJS$])
