--- a/jupiter/autom4te.cache/traces.2
+++ b/jupiter/autom4te.cache/traces.2
@@ -922,21 +922,23 @@ m4trace:configure.ac:11: -1- m4_pattern_allow([^am__fastdepCC_FALSE$])
 m4trace:configure.ac:11: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_TRUE])
 m4trace:configure.ac:11: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_FALSE])
 m4trace:configure.ac:13: -1- m4_pattern_allow([^bash_var$])
-m4trace:configure.ac:31: -1- m4_pattern_allow([^CPP$])
-m4trace:configure.ac:31: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.ac:31: -1- m4_pattern_allow([^CPP$])
-m4trace:configure.ac:31: -1- m4_pattern_allow([^GREP$])
-m4trace:configure.ac:31: -1- m4_pattern_allow([^EGREP$])
-m4trace:configure.ac:31: -1- m4_pattern_allow([^STDC_HEADERS$])
-m4trace:configure.ac:34: -1- m4_pattern_allow([^HAVE_PTHREAD_H$])
-m4trace:configure.ac:59: -1- m4_pattern_allow([^ASYNC_EXEC$])
-m4trace:configure.ac:62: -1- m4_pattern_allow([^HAVE_DLFCN_H$])
-m4trace:configure.ac:70: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:70: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:70: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:70: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:70: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:70: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:70: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:70: -1- _AC_AM_CONFIG_HEADER_HOOK(["$ac_file"])
-m4trace:configure.ac:70: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
+m4trace:configure.ac:15: -1- m4_pattern_allow([^RANLIB$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^NO_MINUS_C_MINUS_O$])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^CPP$])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^CPPFLAGS$])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^CPP$])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^GREP$])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^EGREP$])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^STDC_HEADERS$])
+m4trace:configure.ac:35: -1- m4_pattern_allow([^HAVE_PTHREAD_H$])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^ASYNC_EXEC$])
+m4trace:configure.ac:63: -1- m4_pattern_allow([^HAVE_DLFCN_H$])
+m4trace:configure.ac:71: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:71: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:71: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:71: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:71: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:71: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:71: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:71: -1- _AC_AM_CONFIG_HEADER_HOOK(["$ac_file"])
+m4trace:configure.ac:71: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
